--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.1.7",
-    "element-plus": "^2.9.1"
+    "element-plus": "^2.9.1",
+    "pinia": "^2.3.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
