--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.1.7",
     "element-plus": "^2.9.1",
+    "iconv-lite": "^0.6.3",
     "pinia": "^2.3.0"
   },
   "devDependencies": {
